--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<application
 		android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
 		android:icon="@drawable/app_icon"
 		android:label="@string/app_name"
 		android:requestLegacyExternalStorage="true"
